# rpa-sap

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
rpa_sap/: SapGui.py  __init__.py
rpa_sap/lib/: GridView.py  common.py
tests/: test_sapgui.py
