# pyproject.toml

[build-system]
requires      = ["setuptools>=63.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpa-sap"
version = "1.0.2"
description = "SAPGUI actions for RPA"
readme = "README.md"
authors = [{ name = "Grzegorz Ziolo", email = "grzegorz.ziolo@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["rpa", "sap"]
dependencies = [
    "pywin32 >= 303",
    "pandas >= 1.4.4"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "unitest"]

[project.urls]
Homepage = "https://github.com/21010/rpa-sap"
